<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="17sp"
        android:textColor="#ff0000"
        android:text="@string/text_bluetooth_off" />

    <Button
        android:id="@+id/btn_enable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/text_enable" />

    <Button
        android:id="@+id/btn_view_paired"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:enabled="false"
        android:text="@string/text_view_paired" />

    <Button
        android:id="@+id/btn_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:enabled="false"
        android:text="@string/text_scan_devices" />

    <Button
        android:id="@+id/btn_pag_teste"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:enabled="false"
        android:onClick="impteste"
        android:text="@string/text_pag_teste" />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
     >


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ckHabBlue"

            />

        <TextView android:layout_width="wrap_content" android:layout_height="30dp"
            android:layout_gravity="left"
            android:textColor="#ff000000"
            android:layout_alignParentRight="true"
            android:text="Habilitar Impressão"
            android:textSize="12dp"
            android:gravity="center_vertical"
            />
        </LinearLayout>

</LinearLayout>